# ohmycode

./: .env.example  .gitignore  CLAUDE.md  README.md  demo_observability.py  pyproject.toml  q&a.md
src/ohmycode/: __init__.py  __main__.py  assembler.py  types.py
src/ohmycode/agent/: __init__.py  graph.py  nodes.py  state.py
src/ohmycode/cli/: __init__.py  app.py  clipboard.py
src/ohmycode/config/: defaults.toml  settings.py
src/ohmycode/context/: __init__.py  assembler.py  parts.py  protocols.py
src/ohmycode/llm/: __init__.py  openai_provider.py  protocols.py
src/ohmycode/observability/: __init__.py  formatters.py  logging.py  metrics.py  protocols.py  provider.py  settings.py  spans.py  tracing.py
src/ohmycode/session/: __init__.py  compactor.py  models.py  protocols.py  store.py  summary_budget.py  usage.py
src/ohmycode/tools/: __init__.py  base.py  protocols.py  registry.py
tests/evals/: conftest.py  test_dialogue.py  test_e2e_agent.py  test_security.py  test_tool_calling.py
tests/evals/docker/: Dockerfile.eval
tests/test_agent/: test_graph.py
tests/test_cli/: test_clipboard.py
tests/test_config/: test_settings.py
tests/test_context/: test_assembler.py
tests/test_observability/: __init__.py  conftest.py  test_integration.py  test_logging.py  test_metrics.py  test_protocols.py  test_provider.py  test_settings.py  test_tracing.py
tests/test_session/: __init__.py  test_compactor.py  test_models.py  test_store.py  test_summary_budget.py  test_usage.py
tests/test_tools/: test_base.py  test_builtins.py  test_registry.py  test_stubs.py
(+33 files in other folders)
