[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ohmycode"
version = "0.1.0"
description = "模块化编程助手，基于 LangGraph + Textual TUI"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2,<1",
    "langchain-openai>=0.3,<1",
    "langchain-core>=0.3,<1",
    "textual>=3.0,<4",
    "rich>=13.0,<14",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2",
    "docker>=7",
    "openai>=1",
]

[project.scripts]
ohmycode = "ohmycode.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ohmycode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: 端到端测试，调用真实 LLM API（慢，有费用）",
    "judge: 使用 llm-as-judge 进行主观评估",
    "security: 安全和权限评估测试（在 Docker 中运行）",
    "docker: 需要 Docker 环境的测试",
]
